IMPALA-1986: Streamline return of Status::OK()

This change puts some branching and inlining hints to the compiler
for the constructors and destructor of Status. It explicitly disables
inlining for the functions used in the slow paths so that the compiler
will streamline the case when we return Status::OK() by not calling the
Status' destructor at all.

The following is a comparison of the generated code before and
after this change for the following code snippet:

Status TopNNode::Init(const TPlanNode& tnode) {
  RETURN_IF_ERROR(ExecNode::Init(tnode));
  ....
}

Before this change:

0000000000cbc810 <_ZN6impala8TopNNode4InitERKNS_9TPlanNodeE>:
  ...
  ...
  cbc826:       49 89 e4                mov    %rsp,%r12
  cbc829:       e8 22 bb f7 ff          callq  c38350 <_ZN6impala8ExecNode4InitERKNS_9TPlanNodeE>
  cbc82e:       48 83 3c 24 00          cmpq   $0x0,(%rsp)
  cbc833:       75 73                   jne    cbc8a8 <_ZN6impala8TopNNode4InitERKNS_9TPlanNodeE+0x98>
  cbc835:       48 89 e7                mov    %rsp,%rdi
  cbc838:       e8 63 26 b0 ff          callq  7beea0 <_ZN6impala6StatusD1Ev> <<--- Status' Destructor
  cbc83d:       48 8b 4b 10             mov    0x10(%rbx),%rcx
  cbc841:       48 8d 95 18 02 00 00    lea    0x218(%rbp),%rdx
  cbc848:       48 8d b3 48 01 00 00    lea    0x148(%rbx),%rsi
  cbc84f:       48 89 e7                mov    %rsp,%rdi
  cbc852:       e8 a9 b9 ff ff          callq  cb8200 <_ZN6impala13SortExecExprs4InitERKNS_9TSortInfoEPNS_10ObjectPoolE>
  cbc857:       48 83 3c 24 00          cmpq   $0x0,(%rsp)
  cbc85c:       75 72                   jne    cbc8d0 <_ZN6impala8TopNNode4InitERKNS_9TPlanNodeE+0xc0>
  cbc85e:       48 89 e7                mov    %rsp,%rdi
  cbc861:       e8 3a 26 b0 ff          callq  7beea0 <_ZN6impala6StatusD1Ev>
  ...
  ...

After this change:

0000000000cc9ec0 <_ZN6impala8TopNNode4InitERKNS_9TPlanNodeE>:
  ...
  ...

  cc9ed6:       49 89 e5                mov    %rsp,%r13
  cc9ed9:       e8 02 1b f7 ff          callq  c3b9e0 <_ZN6impala8ExecNode4InitERKNS_9TPlanNodeE>
  cc9ede:       48 83 3c 24 00          cmpq   $0x0,(%rsp)
  cc9ee3:       75 6b                   jne    cc9f50 <_ZN6impala8TopNNode4InitERKNS_9TPlanNodeE+0x90>
  cc9ee5:       48 8b 4b 10             mov    0x10(%rbx),%rcx
  cc9ee9:       48 8d 95 18 02 00 00    lea    0x218(%rbp),%rdx
  cc9ef0:       48 8d b3 48 01 00 00    lea    0x148(%rbx),%rsi
  cc9ef7:       48 89 e7                mov    %rsp,%rdi
  cc9efa:       e8 91 b3 ff ff          callq  cc5290 <_ZN6impala13SortExecExprs4InitERKNS_9TSortInfoEPNS_10ObjectPoolE>
  cc9eff:       48 83 3c 24 00          cmpq   $0x0,(%rsp)
  cc9f04:       0f 85 88 00 00 00       jne    cc9f92 <_ZN6impala8TopNNode4InitERKNS_9TPlanNodeE+0xd2>
  cc9f0a:       48 8d b5 38 02 00 00    lea    0x238(%rbp),%rsi
  ...
  ...

There is about a 70x ~ 80x speed up shown in the status benchmark for
Status::OK() and some slow down for error messages.

Before this change:

Machine Info: Intel(R) Core(TM) i7-4790 CPU @ 3.60GHz
status:               Function     Rate (iters/ms)          Comparison
----------------------------------------------------------------------
             Call Status::OK()           1.318e+09                  1X
     Call static Status::Error            6.71e+07            0.05091X
   Call Status(Code, 'string')           3.346e+06           0.002539X
            Call w/ Assignment           1.089e+09             0.8264X
           Call Cond Branch OK           2.241e+06             0.0017X
        Call Cond Branch ERROR           1.033e+07           0.007838X
 Call Cond Branch Bool (false)           4.065e+10              30.84X
  Call Cond Branch Bool (true)           2.016e+11                153X
Call Cond Boost Optional (true)           5.717e+09              4.338X
Call Cond Boost Optional (false)           2.996e+10              22.73X

After this change:

Machine Info: Intel(R) Core(TM) i7-4790 CPU @ 3.60GHz
status:               Function     Rate (iters/ms)          Comparison
----------------------------------------------------------------------
             Call Status::OK()           8.076e+10                  1X
     Call static Status::Error           4.616e+07          0.0005716X
   Call Status(Code, 'string')           7.128e+06          8.826e-05X
            Call w/ Assignment           4.476e+09            0.05543X
           Call Cond Branch OK           9.154e+06          0.0001134X
        Call Cond Branch ERROR            1.07e+07          0.0001325X
 Call Cond Branch Bool (false)           4.617e+10             0.5717X
  Call Cond Branch Bool (true)            2.13e+11              2.638X
Call Cond Boost Optional (true)           1.067e+10             0.1322X
Call Cond Boost Optional (false)           3.303e+10              0.409X

Change-Id: I24a6515159e18c76b8f9622c895dcef9df488b49
Reviewed-on: http://gerrit.cloudera.org:8080/1827
Reviewed-by: Michael Ho <kwho@cloudera.com>
Tested-by: Internal Jenkins